@@ -1,3 +1,11 @@
+2001-02-22  Michael Engber  <engber@eazel.com>
+
+	reviewed by: Pavel Cisler <pavel@eazel.com>
+
+	* components/notes/nautilus-notes.c:
+	(on_text_field_focus_out_event), (make_notes_view):
+	Save notes on focus out - bug 6851.
+
 2001-02-22  Robin * Slomkowski  <rslomkow@eazel.com>
 
 	reviewed by: Eric Fischer <eric@eazel.com>
